# CudaPlayground

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ruff.yml
bench_quant_gemv/: CMakeLists.txt  README.md  bench_quant_gemv.py  data_utils.py  for_profile.py  ncu.sh  requirements.txt  run.sh  torch_gemv.py
bench_quant_gemv/benchmark/: A100.md  H100.md  README.md
cmake/: generic.cmake
packed_and_depacked/: pack.py
scripts/: clang_format.hook
shared_memory_calculator/: README.md  shared_memory_calculator.py
utils/: cuda_timer.hpp  cuda_utils.hpp
vectorized/: CMakeLists.txt  README.md  kernels.cuh  main.cu  run_build.sh  vec.cuh
